minor clean-up